docs: update documentation to reflect current pipeline and Dockerfiles